--- a/Exercises/09.Recommender_Systems/Exercise 9 - Recommender_Systems - Questions.ipynb
+++ b/Exercises/09.Recommender_Systems/Exercise 9 - Recommender_Systems - Questions.ipynb
@@ -85,17 +85,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -309,17 +309,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -584,9 +584,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 943/943 [05:42<00:00,  2.76it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -597,30 +604,61 @@
       " ...\n",
       " [5. 4. 4. ... 4. 4. 4.]\n",
       " [4. 4. 4. ... 4. 4. 4.]\n",
-      " [3. 5. 3. ... 3. 3. 3.]]\n"
+      " [3. 5. 3. ... 3. 3. 3.]]\n",
+      "[[0. 3. 4. ... 0. 0. 0.]\n",
+      " [4. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [5. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 5. 0. ... 0. 0. 0.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "# TODO: Fill the code for predicting the ratings. \n",
     "# The output is a numpy matrix with the dimensions ((n_users,n_items)) and with the corresponding ranking at each cell.\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "def item_based_predict(ratings, similarity):\n",
-    "    pred = np.zeros([ratings.shape[0],ratings.shape[1]])\n",
-    "    for x in range(pred.shape[0]):\n",
+    "    \n",
+    "    n_users = ratings.shape[0]\n",
+    "    n_items = ratings.shape[1]\n",
+    "    \n",
+    "    pred = np.zeros([n_users, n_items])\n",
+    "    \n",
+    "    for x in tqdm(range(n_users)):\n",
     "        \n",
-    "        notZerosIndex = np.where(ratings[x,:] != 0)\n",
+    "        notZerosIndex = np.where(ratings[x,:] != 0)[0]\n",
     "        \n",
-    "        for y in range(pred.shape[1]):\n",
-    "            if(ratings[x,y]==0):\n",
-    "                relativeSim = (similarity[notZerosIndex,y])\n",
-    "                predRatings = np.dot(ratings[x,notZerosIndex],np.transpose(relativeSim)) / np.sum(relativeSim)\n",
-    "                pred[x,y] = np.round(predRatings)\n",
+    "        for i in range(n_items):\n",
+    "            \n",
+    "            if (ratings[x,i]==0):\n",
+    "                numerator = 0\n",
+    "                denominator = 0\n",
+    "\n",
+    "                for j in notZerosIndex:\n",
+    "                    numerator += similarity[i,j] * ratings[x,j]\n",
+    "                    denominator += np.abs(similarity[i,j])\n",
+    "                if denominator > 0:\n",
+    "                    pred[x,i] = np.rint(numerator/denominator)\n",
+    "                else:\n",
+    "                    pred[x,i] = ratings[x,i]\n",
     "            else:\n",
-    "                pred[x,y] = ratings[x,y]\n",
+    "                pred[x,i] = ratings[x,i]\n",
+    "                    \n",
     "    return pred\n",
     "\n",
     "item_prediction = item_based_predict(train_data_matrix, item_similarity)\n",
-    "print(item_prediction)\n"
+    "print(item_prediction)\n",
+    "print(train_data_matrix)"
    ]
   },
   {
@@ -662,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -693,9 +731,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1682/1682 [03:21<00:00,  8.33it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -706,7 +751,21 @@
       " ...\n",
       " [5. 4. 4. ... 3. 4. 4.]\n",
       " [5. 4. 4. ... 3. 4. 4.]\n",
-      " [4. 5. 3. ... 2. 3. 3.]]\n"
+      " [4. 5. 3. ... 2. 3. 3.]]\n",
+      "[[0. 3. 4. ... 0. 0. 0.]\n",
+      " [4. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [5. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 5. 0. ... 0. 0. 0.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -714,30 +773,45 @@
     "# TODO: Fill the code for predicting the ratings. \n",
     "import math\n",
     "\n",
-    "def user_based_predict(ratings, similarity):\n",
+    "def user_based_predict(user_ratings, similarity):    \n",
+    "    \n",
+    "    ratings = np.copy(user_ratings)\n",
+    "    \n",
+    "    n_users = ratings.shape[0]\n",
+    "    n_items = ratings.shape[1]\n",
     "    \n",
     "    pred = np.zeros([ratings.shape[0],ratings.shape[1]])\n",
+    "    \n",
     "    ratings[ratings == 0] = np.nan\n",
-    "    averageRating = np.nanmean(ratings,axis=1)\n",
+    "    averageRating = np.nanmean(ratings, axis=1)\n",
     "\n",
-    "    for x in range(pred.shape[0]):\n",
-    "        for y in range(pred.shape[1]):\n",
-    "            if(np.isnan(ratings[x,y])):\n",
-    "                notZerosUsers = np.where(~np.isnan(ratings[:,y]))\n",
-    "                if (len(notZerosUsers[0]) > 0):\n",
-    "                    relativeSim = (similarity[notZerosUsers,x])\n",
-    "                    relativeAvg = (averageRating[notZerosUsers])\n",
-    "                    relativeAvg = relativeAvg.reshape([1, relativeAvg.shape[0]])\n",
-    "                    predRatings = np.dot((ratings[notZerosUsers,y] - relativeAvg), np.transpose(relativeSim)) / np.sum(relativeSim)\n",
-    "                    pred[x,y] = np.round(averageRating[x] + predRatings) \n",
+    "    for i in tqdm(range(n_items)):\n",
+    "        \n",
+    "        notZerosIndex = np.where(~np.isnan(ratings[:,i]))[0]\n",
+    "        \n",
+    "        for u1 in range(n_users):\n",
+    "            \n",
+    "            if np.isnan(ratings[u1,i]): \n",
+    "                numerator = 0\n",
+    "                denomerator = 0\n",
+    "                \n",
+    "                for u2 in notZerosIndex:\n",
+    "                    numerator += similarity[u1,u2] * (ratings[u2,i] - averageRating[u2])\n",
+    "                    denomerator += np.abs(similarity[u1,u2])\n",
+    "\n",
+    "                if denomerator > 0:\n",
+    "                    pred[u1,i] = np.rint(averageRating[u1] + numerator/denomerator)\n",
     "                else:\n",
-    "                    pred[x,y] = np.round(averageRating[x])\n",
+    "                    pred[u1,i] = np.rint(averageRating[u1])\n",
+    "                \n",
     "            else:\n",
-    "                pred[x,y] = ratings[x,y]\n",
+    "                pred[u1,i] = ratings[u1,i]\n",
+    "    \n",
     "    return pred\n",
     "\n",
     "user_prediction = user_based_predict(train_data_matrix, user_similarity)\n",
-    "print(user_prediction)\n"
+    "print(user_prediction)\n",
+    "print(train_data_matrix)"
    ]
   },
   {
@@ -767,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -822,19 +896,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset jester could not be found. Do you want to download it? [Y/n] Y\n",
-      "Trying to download dataset from http://eigentaste.berkeley.edu/dataset/jester_dataset_2.zip...\n",
-      "Done! Dataset jester has been saved to /Users/sanadhisutandi/.surprise_data/jester\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from surprise import Dataset\n",
     "\n",
@@ -855,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -876,21 +940,21 @@
       "\n",
       "------------\n",
       "Fold 1\n",
-      "RMSE: 4.3877\n",
-      "MAE:  3.3202\n",
+      "RMSE: 4.3771\n",
+      "MAE:  3.3170\n",
       "------------\n",
       "Fold 2\n",
-      "RMSE: 4.3712\n",
-      "MAE:  3.3107\n",
+      "RMSE: 4.3815\n",
+      "MAE:  3.3161\n",
       "------------\n",
       "------------\n",
-      "Mean RMSE: 4.3794\n",
-      "Mean MAE : 3.3154\n",
+      "Mean RMSE: 4.3793\n",
+      "Mean MAE : 3.3166\n",
       "------------\n",
       "------------\n",
       "        Fold 1  Fold 2  Mean    \n",
-      "RMSE    4.3877  4.3712  4.3794  \n",
-      "MAE     3.3202  3.3107  3.3154  \n"
+      "RMSE    4.3771  4.3815  4.3793  \n",
+      "MAE     3.3170  3.3161  3.3166  \n"
      ]
     }
    ],
@@ -918,19 +982,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE: 4.4395\n",
-      "RMSE: 4.4288\n",
-      "RMSE: 4.4304\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from surprise.model_selection import KFold\n",
     "from surprise import accuracy\n",
@@ -938,20 +992,20 @@
     "uid = str(196)  # raw user id (as in the ratings file). They are **strings**!\n",
     "iid = str(98)  # raw item id (as in the ratings file). They are **strings**!\n",
     "\n",
-    "predictions = None\n",
+    "# predictions = None\n",
     "\n",
-    "kf = KFold(n_splits=3)\n",
+    "# kf = KFold(n_splits=3)\n",
     "\n",
-    "for trainset, testset in kf.split(Dataset.load_builtin('jester')):\n",
+    "# for trainset, testset in kf.split(Dataset.load_builtin('jester')):\n",
     "\n",
-    "    # train and test algorithm.\n",
-    "    algo.fit(trainset)\n",
-    "    predictions = algo.test(testset)\n",
+    "#     # train and test algorithm.\n",
+    "#     algo.fit(trainset)\n",
+    "#     predictions = algo.test(testset)\n",
     "\n",
-    "    # Compute and print Root Mean Squared Error\n",
-    "    accuracy.rmse(predictions, verbose=True)\n",
+    "#     # Compute and print Root Mean Squared Error\n",
+    "#     accuracy.rmse(predictions, verbose=True)\n",
     "\n",
-    "pred = algo.predict(uid,iid)"
+    "# pred = algo.predict(uid,iid)"
    ]
   },
   {
@@ -965,22 +1019,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Prediction(uid='196', iid='98', r_ui=None, est=-1.8517835503534652, details={'was_impossible': False})"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: 196        item: 98         r_ui = 4.00   est = -0.43   {'was_impossible': False}\n"
+     ]
     }
    ],
    "source": [
-    "pred"
+    "pred = algo.predict(uid, iid, r_ui=4, verbose=True)"
    ]
   },
   {
